# fo

./: .gitignore  Dockerfile  compose.yaml  folder_structure.txt  pyproject.toml  requirements.txt
app/: main.py
app/services/: parse.py  process.py
application/: requirements.txt
backend/: main.py
container config/: test_main.py
dependencies/: Dockerfile
