[project]
name = "techassignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pip>=25.2",
    "pypdf>=6.0.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.11",
    "spacy>=3.8.7",
]
